Add tests for the Runium threads. future.set_exception is no longer used when exceptions are raised. Removed python 2.7 and added more interpeters in tox.

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py27,py36,py37
+envlist = py34, py35, py36, py37, flake8, pypy3
+skip_missing_interpreters = true
 
 [testenv]
-# install pytest in the virtualenv where commands will be executed
+
 deps = pytest
 commands =
-    # NOTE: you can run any command line tool here - not just tests
     pytest
