--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
-envlist = py34, py35, py36, py37, flake8, pypy3
+envlist = py34, py35, py36, py37, flake8
 skip_missing_interpreters = true
 
 [testenv]
