--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
   "python.linting.pep8Enabled": false,
   "python.linting.pydocstyleEnabled": false,
   "python.linting.flake8Enabled": true,
-  "python.linting.enabled": true
+  "python.linting.enabled": true,
+  "restructuredtext.confPath": "${workspaceFolder}/.tox/py37/lib/python3.7/site-packages/importlib_metadata/docs"
 }
