--- a/travis.yml
+++ b/travis.yml
@@ -1,5 +1,8 @@
+dist: xenial   # required for Python >= 3.7
 language: python
 python:
-    - 3.5
-    - 3.6
-    - 3.7
+  - "3.5"
+  - "3.6"
+  - "3.7"
+  - "3.8-dev"  # 3.8 development branch
+  - "nightly"  # nightly build
